syntax = "proto3";
option go_package = "ProtoBuf/WebSocketPacket";
option csharp_namespace = "ProtoBuf.WebSocketPacket";

enum PayloadType {
  Init = 0;

  TestEnum = 1000;
}

// PayloadClass 메시지 정의
message PayloadClass {
  string device = 1;                 // 1. 접속 디바이스 정보
  string applicationName = 2;        // 2. 애플리케이션 이름
  string applicationVersion = 3;     // 3. 애플리케이션 버전
  string userUUID = 4;               // 4. 사용자 UUID // 로그인 전이면 0
  string broadCastGroup = 5;         // 5. 방송 그룹 // 그룹이 없다면 0
  PayloadType requestCode = 6;       // 6. 요청 코드
  bytes requestData = 7;             // 7. 요청 데이터 (바이트 배열)
  string resultMessage = 8;          // 8. 결과 메세지
}

// TestEnum 메시지 정의 (1000)
message PayloadClassTestEnum {
  string userId = 1;
}